Bug Fix: Now getting several solutions